# DAFFAgenticAIBootcamp

./: .gitignore  GITHUB_PAGES_SETUP.md  README.md  main.py  pyproject.toml
.github/workflows/: deploy.yml
1. Orchestrate/: README.md
1. Orchestrate/Ministerial Brief Agent/: Agent Prompts.md  DPMC Brief Standards.md  Ministerial Brief Format.docx  healthcare-workforce-openapi.yaml  healthcare_workforce_tool.py  ~$nisterial Brief Format.docx
2. Langflow/: README.md
3. Langgraph/: 0. basic.py  1. memory.py  2. tool.py  3. structured.py  4. search.py  5. endpointreview.py  6. projectreporting.py  README.md
3. Langgraph/src/tools/: github.py  search.py
3. Langgraph/src/utils/: linkutils.py
4. Governance/: 2. ragtriad.py  3. plotlychart.py  trace.json
4. Governance/traces/: 075b5680-89e6-11f0-b10a-e1e20e2a03cb.json  78d6ac40-89e8-11f0-9672-e1a4f75960f9.json  d0d879aa-89e8-11f0-ac30-a783c17ba17b.json  e8614a5c-89e8-11f0-ac30-a783c17ba17b.json
4. Governance/wxgov_traces/: experiment_traces_78a8cd9b-f9e5-454c-9889-87c9d1d13c09 copy.json
docs/: Gemfile  README.md  _config.yml  governance.md  index.md  langflow.md  langgraph.md  orchestrate.md
docs/_layouts/: default.html
docs/_sass/custom/: custom.scss
