[project]
name = "6-08-2025-dta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.9.0",
    "colorama==0.4.6",
    "docling==2.43.0",
    "dotenv==0.9.9",
    "html2text==2025.4.15",
    "langchain==0.3.27",
    "langchain-chroma==0.2.5",
    "langchain-ibm==0.3.15",
    "langgraph==0.2.44",
    "pymupdf4llm==0.0.27",
    "requests>=2.25.0",
]
