[project]
name = "WatsonxAgenticCrashCourse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.9.0",
    "colorama==0.4.6",
    "dash>=3.2.0",
    "dotenv==0.9.9",
    "html2text==2025.4.15",
    "ibm-agent-analytics>=0.5.4",
    "ibm-watsonx-gov",
    "ipython>=9.5.0",
    "jinja2>=3.1.6",
    "jsonpath-ng>=1.7.0",
    "langchain==0.3.27",
    "langchain-ibm==0.3.15",
    "langgraph==0.2.44",
    "nbformat>=5.10.4",
    "numpy==1.26.4",
    "plotly>=6.3.0",
    "pymupdf4llm==0.0.27",
    "requests>=2.25.0",
    "scikit-learn>=1.7.1",
    "setuptools>=80.9.0",
    "textstat>=0.7.10",
    "torch>=2.8.0",
    "unitxt>=1.26.6",
    "yfinance>=0.2.65",
]
